Fixed auton bugs, improved auton interface

--- a/scout/src/main/res/layout/fragment_standscout_shooting.xml
+++ b/scout/src/main/res/layout/fragment_standscout_shooting.xml
@@ -6,65 +6,79 @@
     android:orientation="vertical"
     tools:context=".StandScoutShootingFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:text="Shots Made: 0/0"
-        android:gravity="center_horizontal"
-        android:id="@+id/selectlocation_textview"/>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="fitCenter"
-        android:src="@drawable/blue_field"
-        android:layout_margin="0dp"
-        android:id="@+id/selectlocation_imageview"
-        android:adjustViewBounds="true"
-        android:padding="0dp" />
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="15dp"
-        android:layout_alignParentBottom="true"
-        android:gravity="center">
-        <ImageButton
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_weight="1"
-            android:theme="@style/MVRTButtonStyle"
-            android:id="@+id/shoot_high_make"
-            android:src="@mipmap/ic_plusfive"
-            android:elevation="4dp"/>
-        <ImageButton
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="80dp"
-            android:theme="@style/MVRTButtonStyle"
-            android:id="@+id/shoot_high_miss"
-            android:src="@mipmap/ic_minusfive"
-            android:elevation="4dp"/>
-        <ImageButton
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_weight="1"
-            android:theme="@style/MVRTButtonStyle"
-            android:id="@+id/shoot_low_make"
-            android:src="@mipmap/ic_plustwo"
-            android:elevation="4dp"/>
-        <ImageButton
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="80dp"
-            android:theme="@style/MVRTButtonStyle"
-            android:id="@+id/shoot_low_miss"
-            android:src="@mipmap/ic_minustwo"
-            android:elevation="4dp"/>
-    </LinearLayout>
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:text="Shots Made: 0/0"
+                android:gravity="center_horizontal"
+                android:id="@+id/selectlocation_textview"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="fitCenter"
+                android:src="@drawable/blue_field"
+                android:layout_margin="0dp"
+                android:id="@+id/selectlocation_imageview"
+                android:adjustViewBounds="true"
+                android:padding="0dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="15dp"
+                android:layout_alignParentBottom="true"
+                android:gravity="center">
+                <ImageButton
+                    android:layout_width="0dp"
+                    android:layout_height="80dp"
+                    android:layout_weight="1"
+                    android:theme="@style/MVRTButtonStyle"
+                    android:id="@+id/shoot_high_make"
+                    android:src="@mipmap/ic_plusfive"
+                    android:elevation="4dp"/>
+                <ImageButton
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="80dp"
+                    android:theme="@style/MVRTButtonStyle"
+                    android:id="@+id/shoot_high_miss"
+                    android:src="@mipmap/ic_minusfive"
+                    android:elevation="4dp"/>
+                <ImageButton
+                    android:layout_width="0dp"
+                    android:layout_height="80dp"
+                    android:layout_weight="1"
+                    android:theme="@style/MVRTButtonStyle"
+                    android:id="@+id/shoot_low_make"
+                    android:src="@mipmap/ic_plustwo"
+                    android:elevation="4dp"/>
+                <ImageButton
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="80dp"
+                    android:theme="@style/MVRTButtonStyle"
+                    android:id="@+id/shoot_low_miss"
+                    android:src="@mipmap/ic_minustwo"
+                    android:elevation="4dp"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
