--- a/scout/src/main/res/layout/fragment_standscout_auton.xml
+++ b/scout/src/main/res/layout/fragment_standscout_auton.xml
@@ -48,13 +48,30 @@
 
             </LinearLayout>
 
-            <Button android:id="@+id/auton_cross"
-                android:layout_height="wrap_content"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:padding="20dp"
-                android:text="Cross A Defense"
-                android:layout_margin="5dp"
-                android:theme="@style/MVRTButtonStyle"/>
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button android:id="@+id/auton_cross"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:padding="20dp"
+                    android:text="Cross A Defense"
+                    android:layout_margin="5dp"
+                    android:theme="@style/MVRTButtonStyle"/>
+
+                <Button android:id="@+id/auton_cross_cancel"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:padding="20dp"
+                    android:text="Cancel Crossing"
+                    android:layout_margin="5dp"
+                    android:theme="@style/MVRTButtonStyle"/>
+
+            </LinearLayout>
 
             <CheckBox
                 android:layout_width="match_parent"
