--- a/scout/src/main/res/layout/fragment_standscout_teleop.xml
+++ b/scout/src/main/res/layout/fragment_standscout_teleop.xml
@@ -48,6 +48,7 @@
 
             </LinearLayout>
 
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -58,7 +59,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="5"
                     android:padding="20dp"
-                    android:text="Cross! (timed)"
+                    android:text="Cross!"
                     android:layout_margin="5dp"
                     android:theme="@style/MVRTButtonStyle"/>
 
