--- a/superscout/src/main/res/layout/fragment_super_data.xml
+++ b/superscout/src/main/res/layout/fragment_super_data.xml
@@ -7,9 +7,17 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:id="@+id/superdata_list"
         android:lines="7"/>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Received data will be shown above.\nData can be received via data, QR, or NFC"
+        android:layout_margin="10dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
