--- a/scout/src/main/res/layout/fragment_start_match.xml
+++ b/scout/src/main/res/layout/fragment_start_match.xml
@@ -107,7 +107,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:text="- OR - "/>
+            android:text="Enter data manually, scan QR, or tap (NFC)"/>
 
 
         <ImageButton
