Update scout and super apps

--- a/scout/src/main/res/layout/fragment_standscout_auton.xml
+++ b/scout/src/main/res/layout/fragment_standscout_auton.xml
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:textSize="15sp"
-                android:text="Fuel (Balls)"
+                android:text="Fuel (+5 Balls)"
                 android:layout_weight="1" />
 
             <LinearLayout
