--- a/scout/src/main/res/layout/fragment_standscout_teleop.xml
+++ b/scout/src/main/res/layout/fragment_standscout_teleop.xml
@@ -25,19 +25,20 @@
                 android:text="Fuel (Cycles)"
                 android:layout_weight="1" />
 
+            <Button android:id="@+id/bt_teleop_hopper"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp"
+                android:text="Hopper"
+                android:layout_margin="5dp"
+                android:theme="@style/MVRTButtonStyle"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <Button android:id="@+id/bt_teleop_hopper"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:paddingTop="20dp"
-                    android:paddingBottom="20dp"
-                    android:text="Hopper"
-                    android:layout_margin="5dp"
-                    android:theme="@style/MVRTButtonStyle"/>
 
                 <Button android:id="@+id/bt_teleop_high"
                     android:layout_height="wrap_content"
@@ -45,9 +46,25 @@
                     android:layout_weight="1"
                     android:paddingTop="20dp"
                     android:paddingBottom="20dp"
-                    android:text="High"
+                    android:text="High (+5)"
                     android:layout_margin="5dp"
                     android:theme="@style/MVRTButtonStyle"/>
+
+                <Button android:id="@+id/bt_teleop_high_minus"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:paddingTop="20dp"
+                    android:paddingBottom="20dp"
+                    android:text="-5"
+                    android:layout_margin="5dp"
+                    android:theme="@style/MVRTButtonStyle"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <Button android:id="@+id/bt_teleop_low"
                     android:layout_height="wrap_content"
@@ -55,7 +72,16 @@
                     android:layout_weight="1"
                     android:paddingTop="20dp"
                     android:paddingBottom="20dp"
-                    android:text="Low"
+                    android:text="Low (+5)"
+                    android:layout_margin="5dp"
+                    android:theme="@style/MVRTButtonStyle"/>
+
+                <Button android:id="@+id/bt_teleop_low_minus"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:paddingTop="20dp"
+                    android:paddingBottom="20dp"
+                    android:text="-5"
                     android:layout_margin="5dp"
                     android:theme="@style/MVRTButtonStyle"/>
 
@@ -85,15 +111,6 @@
                     android:layout_margin="5dp"
                     android:theme="@style/MVRTButtonStyle"/>
 
-                <Button android:id="@+id/bt_teleop_gear_minus"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:padding="20dp"
-                    android:text=" -1 "
-                    android:visibility="gone"
-                    android:layout_margin="5dp"
-                    android:theme="@style/MVRTButtonStyle"/>
-
                 <Button android:id="@+id/bt_teleop_putgear"
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
@@ -103,9 +120,16 @@
                     android:layout_margin="5dp"
                     android:theme="@style/MVRTButtonStyle"/>
 
+                <Button android:id="@+id/bt_teleop_dropgear"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:padding="20dp"
+                    android:text="Drop"
+                    android:layout_margin="5dp"
+                    android:theme="@style/MVRTButtonStyle"/>
+
             </LinearLayout>
-
-
 
             <!--CLIMB-->
 
@@ -118,7 +142,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:text="Climb"
+                    android:text="Climb (timed)"
                     android:textSize="15sp"
                     android:id="@+id/teleop_climb_status"/>
 
@@ -154,6 +178,7 @@
                     android:paddingTop="20dp"
                     android:paddingBottom="20dp"
                     android:layout_weight="1"
+                    android:visibility="gone"
                     android:text="Success"
                     android:layout_margin="5dp"
                     android:theme="@style/MVRTButtonStyle"/>
@@ -163,6 +188,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:text="Failed"
+                    android:visibility="gone"
                     android:paddingTop="20dp"
                     android:paddingBottom="20dp"
                     android:layout_margin="5dp"
@@ -183,13 +209,13 @@
             <CheckBox
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Touchpad Lit?"
+                android:text="Touchpad Lit? (at end of match)"
                 android:id="@+id/ch_teleop_climb"/>
 
             <Button android:id="@+id/bt_teleop_finish"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:padding="25dp"
+                android:padding="35dp"
                 android:text="Finish Teleop"
                 android:layout_margin="10dp"
                 android:theme="@style/MVRTButtonStyle"/>
