--- a/scout/src/main/res/layout/nav_drawer_header.xml
+++ b/scout/src/main/res/layout/nav_drawer_header.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="275dp"
     android:background="?attr/colorPrimary">
 
     <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_centerInParent="true"
         android:scaleType="fitCenter"
-        android:src="@drawable/ic_scout_silhouette"/>
+        android:src="@drawable/bullhead"/>
 
     <TextView
         android:layout_width="wrap_content"
