--- a/superscout/src/main/res/layout/nav_drawer_header.xml
+++ b/superscout/src/main/res/layout/nav_drawer_header.xml
@@ -9,7 +9,7 @@
         android:layout_height="150dp"
         android:layout_centerInParent="true"
         android:scaleType="fitCenter"
-        android:src="@drawable/ic_scout_silhouette"/>
+        android:src="@drawable/bullhead"/>
 
     <TextView
         android:layout_width="wrap_content"
